# clients

./: .env.example  .gitignore  .licrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  renovate.json  turbo.json  web.Dockerfile
.github/: dependabot.yml
.github/workflows/: build-gui.yml  production-web.yml  publish-gui.yml  release.yml  staging-web.yml
.github/workflows/gui/: build.yml
.github/workflows/web/: staging.yml
apps/gui/: .prettierignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  vite.config.ts
apps/gui/src/: app.html  app.postcss  fonts.css
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/assets/icons/: icon.icns
apps/gui/src-tauri/entity/: Cargo.toml
apps/gui/src-tauri/entity/src/: instance_mods.rs  instances.rs  lib.rs  prelude.rs
apps/gui/src-tauri/migration/: Cargo.toml
apps/gui/src-tauri/migration/src/: m20220101_000001_create_table.rs
apps/gui/src-tauri/src/: commands.rs  main.rs  structs.rs  utils.rs
apps/gui/src/lib/: stores.ts  types.ts  utils.ts
apps/gui/src/lib/components/: FilterPill.svelte  InfiniteScroll.svelte  Instance.svelte  Mod.svelte  ModCategory.svelte  ModListItem.svelte  ModListSkeletonItem.svelte  SearchBar.svelte  SideBar.svelte  SidebarInstance.svelte  TitleBar.svelte
apps/gui/src/lib/icons/: search.svelte
apps/gui/src/routes/: +layout.svelte  +page.svelte
apps/gui/src/routes/add/: +page.svelte
apps/gui/src/routes/discover/: +page.server.ts  +page.svelte
apps/gui/src/routes/instance/: +page.svelte  +page.ts
apps/story/: package.json  tailwind.config.js
apps/story/.storybook/: preview-head.html
apps/story/public/fonts/: Satoshi-Medium.eot  Satoshi-Regular.eot
apps/story/stories/ui/views/: ButtonsView.svelte  DropdownView.svelte  IconsView.svelte  PillView.svelte  TextView.svelte
apps/story/styles/: fonts.css
apps/ui/: package.json  tailwind.config.js
apps/ui/.storybook/: main.js  preview-head.html
apps/ui/public/: Satoshi-Black.eot  Satoshi-BlackItalic.eot  Satoshi-BoldItalic.eot  Satoshi-Italic.eot  Satoshi-MediumItalic.eot  Satoshi-Variable.eot  Satoshi-VariableItalic.eot
apps/ui/public/fonts/: Satoshi-Bold.eot  Satoshi-Light.eot  Satoshi-LightItalic.eot
apps/ui/stories/ui/: Button.stories.js  Button.stories.ts  Dropdown.stories.ts  Icons.stories.js  Pill.stories.ts  Text.stories.js
apps/ui/stories/ui/views/: ButtonsView.svelte  IconsView.svelte  PillView.svelte  TextView.svelte
apps/web/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  codegen.ts  components.json  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/web-legacy/: .env.example  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
apps/web-legacy/src/: app.postcss
apps/web-legacy/src/routes/: +layout.svelte  styles.css
apps/web-legacy/static/video/: blackhole.webm
apps/web/src/: app.html  app.postcss  fonts.css
apps/web/src/apollo/: ApolloClient.ts  ApolloProvider.tsx  getApolloRSCClient.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: DataTable.tsx
apps/web/src/lib/: gql_types.ts
apps/web/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte  layout.svelte  page.svelte  styles.css
(+51 files in other folders)
