[package]
name = "app"
version = "0.0.0"     # This version is not used by us
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [
    "shell-open",
    "window-close",
    "window-hide",
    "window-unmaximize",
    "window-start-dragging",
    "window-maximize",
    "window-unminimize",
    "window-show",
    "window-minimize",
] }
discord-rich-presence = "0.2.3"
directories = "5.0.1"
regex = "1.10.2"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio"] }
lazy_static = "1.4.0"
async_once = "0.2.6"
entity = { path = "./entity" }
migration = { path = "./migration" }
tokio = { version = "1.33.0", features = ["macros"] }
futures = "0.3.29"
native-dialog = "0.7.0"
anyhow = "1.0.75"
minreq = { version = "2.11.0", features = ["json-using-serde", "rustls", "https-rustls"] }
forge-lib = { git = "https://github.com/beat-forge/lib" }
futures-util = "0.3.29"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
